[package]
name = "sprout_assignment"
version = "0.1.0"
authors = ["Denis Nevmerzhitskii <kastigarster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
